// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetails Screen Renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#313132",
          "padding": 20,
        },
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "maxWidth": 90,
          }
        }
      >
        <Text
          accessible={false}
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "alignSelf": "center",
                "color": "#42803E",
                "fontSize": 90,
                "lineHeight": 90,
              },
            ]
          }
        >
          B
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "alignSelf": "flex-start",
              "flex": 2,
              "flexShrink": 1,
            },
          ]
        }
      >
        BestBC College
      </Text>
    </View>
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Object {
            "marginTop": 20,
          },
        ]
      }
    >
      ContactDetails.DateOfConnection
    </Text>
  </View>
  <View>
    <View
      accessibilityLabel="Screens.RenameContact"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#313132",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 10,
          "opacity": 1,
          "padding": 20,
        }
      }
      testID="com.ariesbifold:id/RenameContact"
    >
      <
        color="#FFFFFF"
        height={20}
        width={20}
      />
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        Screens.RenameContact
      </Text>
    </View>
    <View
      accessibilityLabel="ContactDetails.RemoveContact"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#313132",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 10,
          "opacity": 1,
          "padding": 20,
        }
      }
      testID="com.ariesbifold:id/RemoveFromWallet"
    >
      <
        color="#D8292F"
        height={20}
        width={20}
      />
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "#D8292F",
            },
          ]
        }
      >
        ContactDetails.RemoveContact
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ContactDetails Screen Renders correctly with alt contact name 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#313132",
          "padding": 20,
        },
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "maxWidth": 90,
          }
        }
      >
        <Text
          accessible={false}
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "alignSelf": "center",
                "color": "#42803E",
                "fontSize": 90,
                "lineHeight": 90,
              },
            ]
          }
        >
          A
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "alignSelf": "flex-start",
              "flex": 2,
              "flexShrink": 1,
            },
          ]
        }
      >
        Alt Name
      </Text>
    </View>
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Object {
            "marginTop": 20,
          },
        ]
      }
    >
      ContactDetails.DateOfConnection
    </Text>
  </View>
  <View>
    <View
      accessibilityLabel="Screens.RenameContact"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#313132",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 10,
          "opacity": 1,
          "padding": 20,
        }
      }
      testID="com.ariesbifold:id/RenameContact"
    >
      <
        color="#FFFFFF"
        height={20}
        width={20}
      />
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        Screens.RenameContact
      </Text>
    </View>
    <View
      accessibilityLabel="ContactDetails.RemoveContact"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#313132",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 10,
          "opacity": 1,
          "padding": 20,
        }
      }
      testID="com.ariesbifold:id/RemoveFromWallet"
    >
      <
        color="#D8292F"
        height={20}
        width={20}
      />
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "#D8292F",
            },
          ]
        }
      >
        ContactDetails.RemoveContact
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;
